// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test default 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  min-width: 250px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border: 1px solid black;
  border-radius: 10px;
  margin: 1em;
  background: transparent;
}

.c0 > * {
  margin: 0.5em;
  padding: 0.5em;
}

.c1 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  border: 0;
  font: inherit;
}

.c1:focus {
  box-shadow: inset 0 0 0 1px black;
  border-radius: 7px;
  outline: 0;
}

.c2 {
  position: relative;
  font: inherit;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 2em;
  height: 2em;
  box-sizing: border-box;
  background: transparent;
  border: 0;
}

.c2:focus {
  outline: 0;
}

.c2:focus::before {
  box-shadow: 0 0 5px 1px black;
}

.c2:focus::after {
  box-shadow: 0 0 5px 1px black;
}

.c2::before {
  content: '';
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  width: calc(80% - 2 * 4em / 16);
  height: calc(80% - 2 * 4em / 16);
  border: calc(4em / 16) solid black;
  border-radius: 50%;
}

.c2::after {
  content: '';
  display: block;
  position: absolute;
  right: 0;
  bottom: 0;
  height: calc(4em / 16);
  width: calc(1.41 * 100% - 1.41 * 40% - 40%);
  background: black;
  -webkit-transform: rotateZ(40deg);
  -ms-transform: rotateZ(40deg);
  transform: rotateZ(40deg);
  -webkit-transform-origin: bottom right;
  -ms-transform-origin: bottom right;
  transform-origin: bottom right;
}

.c2:hover {
  cursor: pointer;
}

<form
  className="c0"
  color="transparent"
  onSubmit={[Function]}
>
  <input
    className="c1"
    color="black"
    name="search"
    onChange={[Function]}
    type="search"
  />
  <button
    className="c2"
    color="black"
  />
</form>
`;

exports[`Test with props 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  min-width: 250px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border: 1px solid black;
  border-radius: 10px;
  margin: 1em;
  background: red;
}

.c0 > * {
  margin: 0.5em;
  padding: 0.5em;
}

.c1 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  border: 0;
  font: inherit;
}

.c1:focus {
  box-shadow: inset 0 0 0 1px green;
  border-radius: 7px;
  outline: 0;
}

.c2 {
  position: relative;
  font: inherit;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 2em;
  height: 2em;
  box-sizing: border-box;
  background: transparent;
  border: 0;
}

.c2:focus {
  outline: 0;
}

.c2:focus::before {
  box-shadow: 0 0 5px 1px green;
}

.c2:focus::after {
  box-shadow: 0 0 5px 1px green;
}

.c2::before {
  content: '';
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  width: calc(80% - 2 * 4em / 16);
  height: calc(80% - 2 * 4em / 16);
  border: calc(4em / 16) solid green;
  border-radius: 50%;
}

.c2::after {
  content: '';
  display: block;
  position: absolute;
  right: 0;
  bottom: 0;
  height: calc(4em / 16);
  width: calc(1.41 * 100% - 1.41 * 40% - 40%);
  background: green;
  -webkit-transform: rotateZ(40deg);
  -ms-transform: rotateZ(40deg);
  transform: rotateZ(40deg);
  -webkit-transform-origin: bottom right;
  -ms-transform-origin: bottom right;
  transform-origin: bottom right;
}

.c2:hover {
  cursor: pointer;
}

<form
  className="c0"
  color="red"
  onSubmit={[Function]}
>
  <input
    className="c1"
    color="green"
    name="search"
    onChange={[Function]}
    placeholder="placeholder"
    type="search"
  />
  <button
    className="c2"
    color="green"
  />
</form>
`;
